# financial-agent-takehome

./: .gitattributes  .gitignore  DEMO_OUTPUTS.md  DESIGN.md  PROJECT_FILES_CN.md  README.md  README_CN.md  README_EN.md  REMEDIATION_CN.md  pyproject.toml
.github/workflows/: ci.yml
data/: DATA_SNAPSHOT.json  README.md
data/market/: README.md  README_EN.md  csi300.csv.meta.json  sse_composite.csv.meta.json  szse_component.csv.meta.json
docs/: FAILURE_MATRIX.md  GOLDEN_QA.md  PROJECT_STRUCTURE_CN.md
evals/: golden_answers.json  retrieval_cases.json
src/finagent/: agent.py  checksums.py  cli.py  evaluation.py  ingest.py  integrity.py  market.py  memory.py  models.py  retrieval.py  sec.py  sources.py
tests/: test_finagent.py  test_review_readiness.py
